src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>CAC_BOL_APP__c</fullName>
        <description>Indica si el cliente tiene el servicio de banca a distancia contratado.</description>
        <label>BOL/APP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAC_OT__c</fullName>
        <description>Indica si el cliente tiene el servicio de Oficina Telefónica</description>
        <label>Contrato OT</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAC_Telefono_Confirmado_Icono__c</fullName>
        <formula>CASE(TEXT(Telefono_confirmado__c),&quot;1&quot;,
IMAGE(&quot;/resource/OK&quot;, &quot;OK&quot;,35,40), 
IMAGE(&quot;/resource/KO&quot;, &quot;KO&quot;,35,40))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Telefono Confirmado</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Descripcion_Marca_Cartera__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cartera</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Idioma_de_preferencia__c</fullName>
        <description>Idioma de preferencia para realizar gestiones con el cliente</description>
        <label>Idioma</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Español</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Gallego</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Catalán</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Euskera</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Valenciano</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Ingés</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>Alemán</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>Francés</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>Portugués</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Numero_de_documento__c</fullName>
        <description>Número del documento de identificación del cliente: DNI, CIF, etc</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Documento</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>